landing_page/style.css
:root {
  --background-color: white;
  --main-color: #011035;
  --circle-color: #011035;
  --circle-outline: black;
  --text-color: black;
  --github-logo: url("github_logo.png");
  --insta-logo: url("insta_logo.png");
  --linkedin-logo: url("linkedin_logo.png");
  --twitter-logo: url("twitter_logo_blue.png");
}

/***Dark mode***/
@media (prefers-color-scheme:dark) {
  :root {
      --background-color: rgb(17, 17, 17);
      --main-color: rgb(50, 50, 50, 1);
      --circle-color: var(--main-color);
      --circle-outline: rgb(170, 170, 170);
      --text-color: rgb(170, 170, 170);
      --github-logo: url("github_logo_dark.png");
  }
}

html, body {
  background-color: white;
  background-color: var(--background-color);
  font-family: 'Futura', 'Open Sans';
  margin: 0;
  padding: 0;
  text-align:center;
  width:auto;
}

/****Anchors****/
a {
  -webkit-transition:color 0.25s;
  transition:color 0.25s;
  text-decoration:none;
}

a:hover {
  color: #6495ED;
  cursor: pointer;
  -webkit-transition: color 1s;
  transition: color 1s;
  text-decoration: none;
}

.container {
  width:80%;
}

.header {
  background-color: #011035;
  background-color: var(--main-color);
  height: 10vh;
}

.header h1 {
  color: #31363d;
  color: var(--text-color);
  font-size: 40px;
  margin-top:10vh;
  text-transform: uppercase;
}

.mini-header {
  margin-top:4%;
  color: #31363d;
  color: var(--text-color);
}

.main {
  margin-top: 6vh;
  margin-bottom:1vh;
}

.social img {
  width:3vw;
  margin-top: 2vh;
  margin-bottom: 3vh;
  margin-left:10px;
  margin-right: 10px;
  display:inline;
}


.mini-header {
  margin-bottom:3vh;
}

.places-text {
  color: #31363d;
  color: var(--text-color);
}

.footer {
  background-color: #011035;
  background-color: var(--main-color);
  color: #31363d;
  color: var(--text-color);
  height: 75vh;
}

.jesseFace {
 width: 150px;
 border-radius: 50%;
 border-width: thick;
 border-style: solid;
 border-color: black;
 border-color: var(--circle-outline);
}

/* stationary hover target: the holder never transforms, so the hit area
   stays put and hovering near the edge can't un-hover mid-flip and jitter */
.bigCircle-holder {
  border-radius: 50%;
  height: 150px;
  perspective: 600px;
  width: 150px;
}

.bigCircle {
  align-items: center;
  background-color: #011035;
  background-color: var(--circle-color);
  border-color: black;
  border-color: var(--circle-outline);
  border-radius: 50%;
  border-style: solid;
  color: black;
  color: white;
  display: flex;
  font-size: 9rem;
  height: 150px;
  justify-content: center;
  position: relative;
  text-align: center;
  transform-style: preserve-3d;
  transition: transform 0.5s;
  width: 150px;
}

#jlAboutMe {
  font-size: 4rem;
}

.bigCircle-holder:hover .bigCircle, .bigCircle-holder:active .bigCircle {
  transform: rotateY(180deg);
}

.bigCircle-front, .bigCircle-back {
  color: white;
  max-width: 50%;
  -webkit-perspective: 0;
  -webkit-backface-visibility: hidden;
  -webkit-transform: translate3d(0,0,0);
  visibility:visible;
  backface-visibility: hidden;
  position: absolute;
}

.bigCircle-back {
  font-size: 5rem;
  transform: rotateY(180deg);
}


.smallCircle {
 align-items: center;
 background-color: #000931;
 background-color: var(--circle-color);
 border-color: black;
 border-color: var(--circle-outline);
 border-radius: 50%;
 border-style: solid;
 color: white;
 display: flex;
 font-size: 1.6rem;
 height: 75px;
 justify-content: center;
 width: 75px;
}

.smallCircle-inner {
  color: white;
}

/* from https://jarv.is/notes/css-waving-hand-emoji/ */
span.wave {
  animation-name: wave-animation;
  animation-duration: 2.5s;
  animation-iteration-count: infinite;
  transform-origin: 70% 70%;
  display: inline-block;
}

@keyframes wave-animation {
    0% { transform: rotate(  0.0deg) }
   10% { transform: rotate(-10.0deg) }
   20% { transform: rotate( 12.0deg) }
   30% { transform: rotate(-10.0deg) }
   40% { transform: rotate(  9.0deg) }
   50% { transform: rotate(  0.0deg) }
  100% { transform: rotate(  0.0deg) }
}
/******About********/

.about-me-content {
  color: #31363d;
  color: var(--text-color);
  margin-top:3vh;
  text-align: left;
  font-family: 'Vollkorn';
  font-size:18px;
}

/***Images***/

.social-image{
  width:3vw;
  height:3vw;
  background-size:3vw;
  margin-top: 2vh;
  margin-bottom: 2vh;
  margin-left:10px;
  margin-right: 10px;
  display:inline-block;
  background-position: center center;
  background-repeat: no-repeat;
}

.github-logo{
  background-image: url("github_logo.png");
  background-image: var(--github-logo);
}

.insta-logo{
  background-image: url("insta_logo.png");
  background-image: var(--insta-logo);
}

.linkedin-logo{
  background-image: url("linkedin_logo.png");
  background-image: var(--linkedin-logo);
}

.twitter-logo{
  background-image: url("twitter_logo.png");
  background-image: var(--twitter-logo);
}

/***********************Mobile Screens*********************************/

/**portrait**/
@media only screen and (max-device-width: 768px) {
  html, body {
    width: auto;
  }

  .container{
    width: 100%;
  }

  .bigCircle, .jesseFace{
    width:16vw;
    height:16vw;
    font-size: 3rem;
    border-width: medium;
  }

  .bigCircle{
    color: white;
    transition: transform 0.5s;
    transform-style: preserve-3d;
    position: relative;
    text-align: center;
  }

  .bigCircle:hover, .bigCircle:active{
    transform: rotateY(180deg);
  }

  .bigCircle-front, .bigCircle-back {
    color: white;
    max-width: 50%;
    -webkit-perspective: 0;
    -webkit-backface-visibility: hidden;
    -webkit-transform: translate3d(0,0,0);
    visibility:visible;
    backface-visibility: hidden;
    position: absolute;

  }

  .bigCircle-back {
    font-size: 2rem;
    transform: rotateY(180deg);
  }

  .smallCircle {
    width:  12vw;
    height: 12vw;
    font-size: 1rem;
  }

  #circle_writings img{
    width:12vw;
  }

  .social .container{
    margin-right:0;
    margin-left:0;
    text-align:center;
  }

  .footer{
    background-color: blue;
    background-color: var(--main-color);
    height: 50vh;
  }

  .social-image{
    width:8vw;
    height:8vw;
    background-size:8vw;
  }


  /*About*/
  .about-me-content{
    font-size:16px;
  }

  #jlAboutMe {
    font-size: 2rem;
  }

}

/***landscape****/
@media only screen and (max-device-width: 1024px) and (orientation: landscape) {
  html, body {
    width: auto;
  }
  .container, .row {
    width: auto;
  }

  .social .container {
    margin-right:0;
    margin-left:0;
    text-align:center;
  }

  .footer {
    background-color: #011035;
    background-color: var(--main-color);
    height: 40vw;
  }

  .social-image{
    width:8vw;
    height:8vw;
    background-size:8vw;
  }


  /*About*/
  .about-me-content{
    font-size:16px;
  }

  }
}

